<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_rectangle"
    tools:context=".HomeFragment">


    <ImageView
        android:id="@+id/logo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp8"
        android:contentDescription="@string/star_wars_logo"
        android:src="@drawable/star_wars_logo"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/separator"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp4"
        android:layout_marginTop="@dimen/dp4"
        android:alpha="0.2"
        android:background="@color/white"
        app:layout_constraintTop_toBottomOf="@id/logo" />

    <ImageView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:alpha="0.2"
        android:contentDescription="@string/yoda"
        android:src="@drawable/banner_yoda"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/separator" />

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/separator">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <TextView
                android:id="@+id/textView1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp8"
                android:layout_marginEnd="@dimen/dp8"
                android:fontFamily="@font/karla"
                android:text="@string/find_all_your_favorite_character"
                android:textColor="@color/white"
                android:textSize="@dimen/sp56"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp8"
                android:layout_marginTop="@dimen/dp32"
                android:layout_marginEnd="@dimen/dp8"
                android:fontFamily="@font/karla"
                android:text="@string/you_can_find_out_all_the_information_about_your_favorite_characters"
                android:textColor="@color/white"
                android:textSize="@dimen/sp32"
                app:layout_constraintTop_toBottomOf="@id/textView1" />

            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="160dp"
                android:layout_height="56dp"
                android:layout_marginStart="@dimen/dp8"
                android:layout_marginTop="@dimen/dp32"
                android:background="@drawable/yellow_rectangle_with_shadow"
                android:fontFamily="@font/karla"
                android:text="@string/see_more"
                android:textAllCaps="false"
                android:textColor="@color/black"
                android:textSize="@dimen/sp16"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textView2" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>