<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Characters">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/background_top"
        android:contentDescription="@string/star_wars_logo"
        android:paddingTop="@dimen/dp8"
        android:src="@drawable/star_wars_logo"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/countOfCharacters"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp8"
        android:layout_marginTop="@dimen/dp8"
        android:fontFamily="@font/karla"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/logo"
        tools:text="60" />

    <TextView
        android:id="@+id/peopleTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp8"
        android:fontFamily="@font/karla"
        android:text="@string/peoples"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBaseline_toBaselineOf="@id/countOfCharacters"
        app:layout_constraintStart_toEndOf="@id/countOfCharacters" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp8"
        android:fontFamily="@font/karla"
        android:text="@string/for_you_to_choose_your_favorite"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintBaseline_toBaselineOf="@id/peopleTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/peopleTextView"
        app:layout_constraintTop_toBottomOf="@id/logo" />

    <TextView
        android:id="@+id/featureSelection"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp8"
        android:layout_marginTop="@dimen/dp8"
        android:fontFamily="@font/karla"
        android:text="@string/color_eye"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/countOfCharacters" />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp8"
        android:fontFamily="@font/karla"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@id/featureSelection"
        app:layout_constraintTop_toTopOf="@id/featureSelection" />

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp8"
        android:layout_marginTop="@dimen/dp16"
        android:layout_marginEnd="@dimen/dp8"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/featureSelection"
        tools:itemCount="3"
        tools:listitem="@layout/character_card" />


</androidx.constraintlayout.widget.ConstraintLayout>